--- a/index.html
+++ b/index.html
@@ -11,36 +11,115 @@
     <title>Planos de internet</title>
 </head>
 <body>
-    <i class="fas fa-shield-alt"></i>
-    
+    <div class="container">
+        <div class="navbar-container">
+            <nav>
+                <a href="#">
+                    <img src="imagem/astronauta-logo.png" alt="logo" class="logo">
+                </a>
+
+                <ul class="navbar-itens">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Preços</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#" class="default-btn">Entrar</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <main>
+            <div class="main-banner">
+                <h1>AstroNet</h1>
+                <p>A melhor internet da galáxia</p>
+            </div>
+            <!-- serviços -->
+            <section class="services-container">
+                <ul>
+                    <li>
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Segurança</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit quibusdam nisi hic perspiciatis earum doloribus consequatur iste quasi ullam praesentium ipsa molestiae rerum unde labore cumque, maxime sint facilis tempora.</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-rocket"></i>
+                        <h3>Performace</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium sunt, quae reprehenderit ipsum facilis voluptate, sed sequi natus illo pariatur a aliquid architecto enim hic quis in maiores recusandae minus.</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-comments"></i>
+                        <h3>Suporte 24/7</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero earum totam aperiam asperiores beatae. Aspernatur consequuntur a quae quisquam natus sunt ex officiis aliquid, quaerat harum facilis qui quam accusantium.</p>
+                    </li>
+                </ul>
+            </section>
+            <!-- Planos e Preços -->
+            <section class="pricing-container">
+                <h2>Planos e Preços</h2>
+                <p>Escolha um plano que melhor atende as suas necessidades</p>
+                <div class="plans-container">
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$39,99</li>
+                            <li class="plan-name">Inicial</li>
+                            <li>50 Mbps de velocidade</li>
+                            <li>Acesso ilimitado à internet</li>
+                            <li>Suporte técnico online básico</li>
+                            <li class="plan-btn">Saiba Mais</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$59,99</li>
+                            <li class="plan-name">Intermediário</li>
+                            <li>100 Mbps de velocidade</li>
+                            <li>Acesso ilimitado à internet</li>
+                            <li>Serviço de segurança cibernética</li>
+                            <li>Suporte técnico 24 horas por telefone</li>
+                            <li class="plan-btn">Saiba Mais</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$79,99</li>
+                            <li class="plan-name">Avançado</li>
+                            <li>200 Mbps de velocidade</li>
+                            <li>Acesso ilimitado à internet</li>
+                            <li>Serviço de segurança cibernética</li>
+                            <li>Acesso a streaming de vídeo em alta definição (HD) sem buffer</li>
+                            <li>Suporte técnico 24 horas por telefone</li>
+                            <li class="plan-btn">Saiba Mais</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$99,99</li>
+                            <li class="plan-name">Premium</li>
+                            <li>500 Mbps de velocidade</li>
+                            <li>Acesso ilimitado à internet</li>
+                            <li>Serviço de segurança cibernética premium</li>
+                            <li>Acesso a streaming de vídeo em alta definição (HD) sem buffer</li>
+                            <li>Suporte técnico premium com resposta imediata</li>
+                            <li class="plan-btn">Saiba Mais</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>  
 </body>
 </html>
 <!-- Pacote de Internet Residencial Progressiva:
 
-Nível 1 - Inicial (50 Mbps):
-
-Conexão de internet de 50 Mbps de velocidade.
-Acesso ilimitado à internet.
-Suporte técnico online básico.
-
-Nível 2 - Intermediário (100 Mbps):
-
-Atualização para uma conexão de 100 Mbps de velocidade.
-Inclusão de serviço de segurança cibernética.
-Suporte técnico prioritário por telefone ou chat.
-
-Nível 3 - Avançado (200 Mbps):
-
-Atualização para uma conexão de 200 Mbps de velocidade.
-Acesso a streaming de vídeo em alta definição (HD) sem buffer.
-Suporte técnico 24 horas por telefone.
-
-Nível 4 - Premium (500 Mbps):
-
-Atualização para uma conexão de 500 Mbps de velocidade.
-Serviço de segurança cibernética premium.
-Suporte técnico premium com resposta imediata.
-A adição do Nível 4 oferece uma opção premium com uma conexão de internet mais rápida, segurança cibernética avançada e suporte técnico de alta qualidade.
 
 Pacote de Internet para Empresas Progressiva:
 
