--- a/index.html
+++ b/index.html
@@ -71,19 +71,22 @@
                             <li>50 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
                             <li>Suporte técnico online básico</li>
+                            <li></li>
+                            <li></li>
                             <li class="plan-btn">Saiba Mais</li>
                         </ul>
                     </div>
 
                     <div class="plan">
                         <ul>
-                            <li class="price">R$59,99</li>
+                            <li class="price recommended">R$59,99</li>
                             <li class="plan-name">Intermediário</li>
                             <li>100 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
-                            <li>Serviço de segurança cibernética</li>
+                            <li>Segurança cibernética</li>
                             <li>Suporte técnico 24 horas por telefone</li>
-                            <li class="plan-btn">Saiba Mais</li>
+                            <li></li>
+                            <li class="plan-btn recommended">Saiba Mais</li>
                         </ul>
                     </div>
 
@@ -93,8 +96,8 @@
                             <li class="plan-name">Avançado</li>
                             <li>200 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
-                            <li>Serviço de segurança cibernética</li>
-                            <li>Acesso a streaming de vídeo em alta definição (HD) sem buffer</li>
+                            <li>Segurança cibernética</li>
+                            <li>Acesso a streaming de vídeo em alta definição</li>
                             <li>Suporte técnico 24 horas por telefone</li>
                             <li class="plan-btn">Saiba Mais</li>
                         </ul>
@@ -106,44 +109,37 @@
                             <li class="plan-name">Premium</li>
                             <li>500 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
-                            <li>Serviço de segurança cibernética premium</li>
-                            <li>Acesso a streaming de vídeo em alta definição (HD) sem buffer</li>
+                            <li>Segurança cibernética premium</li>
+                            <li>Acesso a streaming de vídeo em alta definição</li>
                             <li>Suporte técnico premium com resposta imediata</li>
                             <li class="plan-btn">Saiba Mais</li>
                         </ul>
                     </div>
                 </div>
             </section>
+            <!-- Local -->
+            <section class="local">
+                <h2>Qual local você quer contratar a AstroNet</h2>
+                <p>Verifique se sua localização está disponível</p>
+                <form>
+                    <input type="text" name="lugar" id="lugar" placeholder="Exemplo: São Paulo">
+                    <input type="submit" value="Procurar">
+                </form>
+            </section>
+            <!-- Contato -->
+            <section class="contato">
+                <h2>Entre em contato conosco</h2>
+                <p>Envie sua mensagem, responderemos o mais breve possivel </p>
+                <form>
+                    <input type="text" name="name" id="name" placeholder="Seu nome">
+                    <input type="email" name="email" id="email" placeholder="Seu email">
+                    <textarea name="mensagem" id="mensagem" placeholder="Escreva o que você precisa"></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </section>
         </main>
+        <!-- Rodapé -->
+        <footer>AstroNet por Alice Oliveira &copy; 2023</footer>
     </div>  
 </body>
 </html>
-<!-- Pacote de Internet Residencial Progressiva:
-
-
-Pacote de Internet para Empresas Progressiva:
-
-Nível 1 - Inicial (100 Mbps):
-
-Conexão de internet empresarial de 100 Mbps de velocidade.
-Acesso ilimitado à internet.
-Suporte técnico empresarial básico.
-
-Nível 2 - Intermediário (250 Mbps):
-
-Atualização para uma conexão de 250 Mbps de velocidade.
-Inclusão de backup de dados e recuperação de desastres.
-Suporte técnico empresarial prioritário.
-
-Nível 3 - Avançado (500 Mbps):
-
-Atualização para uma conexão de 500 Mbps de velocidade.
-Serviço de segurança cibernética empresarial avançado.
-Suporte técnico empresarial 24/7.
-
-Nível 4 - Empresarial Premium (1 Gbps):
-
-Atualização para uma conexão de 1 Gbps de velocidade.
-Serviço de segurança cibernética empresarial premium.
-Suporte técnico empresarial premium com resposta imediata.
-A inclusão do Nível 4 no pacote de internet para empresas oferece uma opção premium com velocidade máxima de conexão, segurança cibernética de nível empresarial e suporte técnico empresarial de alta qualidade. -->
