--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h2>Planos e Preços</h2>
                 <p>Escolha um plano que melhor atende as suas necessidades</p>
                 <div class="plans-container">
-                    <div class="plan">
+                    <div class="plan um">
                         <ul>
                             <li class="price">R$39,99</li>
                             <li class="plan-name">Inicial</li>
