alteração no texto

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <li>200 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
                             <li>Segurança cibernética</li>
-                            <li>Acesso a streaming de vídeo em alta definição</li>
+                            <li>Streaming de vídeo em alta definição</li>
                             <li>Suporte técnico 24 horas por telefone</li>
                             <li class="plan-btn">Saiba Mais</li>
                         </ul>
@@ -110,7 +110,7 @@
                             <li>500 Mbps de velocidade</li>
                             <li>Acesso ilimitado à internet</li>
                             <li>Segurança cibernética premium</li>
-                            <li>Acesso a streaming de vídeo em alta definição</li>
+                            <li>Streaming de vídeo em alta definição</li>
                             <li>Suporte técnico premium com resposta imediata</li>
                             <li class="plan-btn">Saiba Mais</li>
                         </ul>
