--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- estilo -->
     <link rel="stylesheet" href="style.css">
     <title>Planos de internet</title>
+    <link rel="shortcut icon" href="imagem/astronauta.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
